--- a/aula.html
+++ b/aula.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <title>Aula de Login com Javascript</title>
+    <script src="https://cdn.jsdelivr.net/gh/1andersonmotta/loginJS/login.js"></script>
 </head>
 
 <body>
